# strongswan

./: configure.ac
conf/: Makefile.am
conf/plugins/: eap-simaka-rest.opt
src/libcharon/: Android.mk  Makefile.am
src/libcharon/plugins/eap_simaka_rest/: Makefile.am  eap_simaka_rest_client.c  eap_simaka_rest_client.h  eap_simaka_rest_plugin.c  eap_simaka_rest_plugin.h  eap_simaka_rest_provider.c  eap_simaka_rest_provider.h
testing/scripts/recipes/: 013_strongswan.mk
